added handlers func getAll GetById RemoveSong
